--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
             <div class="row">
               <div class="col-xl-3">
                 <!-- 7 -->
-                <button type="button" id="seven" class="btn btn-outline-primary">7</button>
+                <button type="button"  id="seven" class="btn btn-outline-primary">7</button>
               </div>
               <div class="col-xl-3">
                 <!-- 8 -->
-                <button type="button" id="eight" class="btn btn-outline-primary">8</button>
+                <button type="button"  id="eight" class="btn btn-outline-primary">8</button>
               </div>
               <div class="col-xl-3">
                 <!-- 9 -->
-                <button type="button" id="nine"class="btn btn-outline-primary">9</button>
+                <button type="button"  id="nine"class="btn btn-outline-primary">9</button>
               </div>
               <div class="col-xl-3">
                 <!-- + -->
@@ -52,15 +52,15 @@
             <div class="row">
               <div class="col-xl-3">
                 <!-- 4 -->
-                <button type="button" id="four"class="btn btn-outline-primary">4</button>
+                <button type="button"  id="four"class="btn btn-outline-primary">4</button>
               </div>
               <div class="col-xl-3">
                 <!-- 5 -->
-                <button type="button" id="five"class="btn btn-outline-primary">5</button>
+                <button type="button"  id="five"class="btn btn-outline-primary">5</button>
               </div>
               <div class="col-xl-3">
                 <!-- 6 -->
-                <button type="button" id="six"class="btn btn-outline-primary">6</button>
+                <button type="button"  id="six"class="btn btn-outline-primary">6</button>
               </div>
               <div class="col-xl-3">
                 <!-- - -->
@@ -70,15 +70,15 @@
             <div class="row">
               <div class="col-xl-3">
                 <!-- 1 -->
-                <button type="button" id="one"class="btn btn-outline-primary">1</button>
+                <button type="button"  id="one"class="btn btn-outline-primary">1</button>
               </div>
               <div class="col-xl-3">
                 <!-- 2 -->
-                <button type="button" id="two"class="btn btn-outline-primary">2</button>
+                <button type="button"  id="two"class="btn btn-outline-primary">2</button>
               </div>
               <div class="col-xl-3">
                 <!-- 3 -->
-                <button type="button" id="three"class="btn btn-outline-primary">3</button>
+                <button type="button"  id="three"class="btn btn-outline-primary">3</button>
               </div>
               <div class="col-xl-3">
                 <!-- X -->
@@ -88,15 +88,15 @@
             <div class="row">
               <div class="col-xl-3">
                 <!-- 0 -->
-                <button type="button" id="zero"class="btn btn-outline-primary">0</button>
+                <button type="button"  id="zero"class="btn btn-outline-primary">0</button>
               </div>
               <div class="col-xl-3">
                 <!-- . -->
-                <button type="button" id="decimal"class="btn btn-outline-primary">.</button>
+                <button type="button"  id="decimal"class="btn btn-outline-primary">.</button>
               </div>
               <div class="col-xl-3">
                 <!-- = -->
-                <button type="button" id="equals"class="btn btn-outline-primary">=</button>
+                <button type="button" id="equals"class="btn btn-outline-dark">=</button>
               </div>
               <div class="col-xl-3">
                 <!-- / -->
